--- a/content/themes/rksn/assets/css/screen.css
+++ b/content/themes/rksn/assets/css/screen.css
@@ -489,6 +489,7 @@ margin on the iframe, cause it breaks stuff. */
     position: relative;
     padding: 35px 40px;
     margin: 0 0 30px 0;
+    z-index: 9;
 }
 
 .main-nav a {
@@ -619,7 +620,8 @@ margin on the iframe, cause it breaks stuff. */
 
 /* Special styles when overlaid on an image*/
 .main-nav.overlay {
-    position: absolute;
+    position: fixed;
+    z-index: 15001;
     top: 0;
     left: 0;
     right: 0;
@@ -867,7 +869,8 @@ body:not(.post-template) .post-title {
 /* Stop .full-img from creating horizontal scroll - slight hack due to
    imperfections with browser width % calculations and rounding */
 .post-template .content {
-    overflow: hidden;
+    padding-top: 1.5em;
+    /*overflow: hidden;*/
 }
 
 /* Tweak the .post wrapper style */
@@ -1055,7 +1058,7 @@ body:not(.post-template) .post-title {
    ========================================================================== */
 
 .post-head.main-header {
-    height: 65%;
+    /*height: 65%;*/
     min-height: 180px;
 }
 
@@ -1203,6 +1206,10 @@ body:not(.post-template) .post-title {
     list-style: none;
     margin: 0;
     padding: 0;
+    -webkit-animation: fade-in-down 0.6s;
+    animation: fade-in-down 0.6s;
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
 }
 .social li {
     display: inline-block;
@@ -1218,6 +1225,163 @@ body:not(.post-template) .post-title {
 hr.small {
     width: 50px;
     margin: 0.5em auto 0;
+    -webkit-animation: fade-in-down 0.6s;
+    animation: fade-in-down 0.6s;
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+
+/* RWD */
+article.article img {
+    display: block;
+    min-width: 100%;
+    max-width: 100%;
+}
+* {
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+/* Effects */
+html, body, .container, .header {
+    min-height: 100%;
+}
+.header {
+    position: relative;
+    margin: 0 auto;
+    min-height: 560px;
+    width: 100%;
+    height: 100%;
+}
+
+.bg-img {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+.bg-img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.title {
+    z-index: 1000;
+    margin: 0 auto;
+    padding: 0 1.25em;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.title h1 {
+    padding: 0 0 0.2em;
+    color: #fff;
+    font-weight: 800;
+    font-size: 3.25em;
+    margin: 0 auto;
+}
+
+.title p {
+    color: #fff;
+    padding: 0 0 0.6em;
+    font-weight: 300;
+    font-size: 0.85em;
+    margin: 0 auto;
+}
+
+.title h1,
+.title p.subline {
+    line-height: 1;
+}
+
+.title p.subline {
+    font-size: 1.75em;
+}
+
+/* -------------------------- */
+/* Push */
+/* -------------------------- */
+.intro-effect-push:not(.notrans) .header,
+.intro-effect-push:not(.notrans) > .title,
+.intro-effect-push:not(.notrans) .content > div {
+    -webkit-transition-property: opacity, -webkit-transform;
+    transition-property: opacity, transform;
+    -webkit-transition-duration: 1s;
+    transition-duration: 1s;
+}
+
+.intro-effect-push:not(.notrans) .header {
+    -webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+    transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+    -webkit-transition-duration: 1.2s;
+    transition-duration: 1.2s;
+}
+
+.intro-effect-push .codrops-demos a {
+    color: #108576;
+}
+
+.intro-effect-push .header {
+    position: absolute;
+    z-index: 1500;
+    height: 100% !important;
+}
+
+.intro-effect-push > .title {
+    position: relative;
+    top: auto;
+    left: auto;
+    padding: 6em 1em 2em;
+}
+
+.intro-effect-push .content > div {
+    /*margin-top: 50px;*/
+    color: #b2b2c0;
+}
+
+.intro-effect-push > .title,
+.intro-effect-push .content > div {
+    -webkit-transform: translateY(400px);
+    transform: translateY(400px);
+    opacity: 0;
+}
+
+.intro-effect-push.modify > .title,
+.intro-effect-push.modify .content > div {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.intro-effect-push.modify .header {
+    opacity: 0;
+    -webkit-transform: translateY(-100%) scale(0.9);
+    transform: translateY(-100%) scale(0.9);
+}
+
+/* Delays */
+.intro-effect-push.modify:not(.notrans) > .title {
+    -webkit-transition-delay: 0.5s;
+    transition-delay: 0.5s;
+}
+
+.intro-effect-push.modify:not(.notrans) .content > div {
+    -webkit-transition-delay: 0.6s;
+    transition-delay: 0.6s;
 }
 
 /* ==========================================================================
@@ -1397,6 +1561,10 @@ hr.small {
         font-size: 0.95em
     }
 
+    .post-template .content {
+        padding-top: 4.5em;
+    }
+
     body:not(.post-template) .post-title {
         font-size: 3.2rem;
     }
@@ -1566,6 +1734,11 @@ hr.small {
         margin-right: 16px;
         padding-bottom: 2rem;
         line-height: 1.65em;
+    }
+
+    .post-template .content {
+        padding-top: 3.5em;
+        /*overflow: hidden;*/
     }
 
     .post-date {
