--- a/content/themes/rksn/index.hbs
+++ b/content/themes/rksn/index.hbs
@@ -13,9 +13,9 @@
             <h2 class="page-description">{{@blog.description}}</h2>
             <hr class="small">
             <ul class="social">
-                <li><a href="http://github.com/rhaluzan">Github</a></li>
-                <li><a href="https://twitter.com/roks0n">Twitter</a></li>
-                <li><a href="http://fb.com/roks0n">Facebook</a></li>
+                <li><a href="http://github.com/rhaluzan" taget="_blank">Github</a></li>
+                <li><a href="https://twitter.com/roks0n" taget="_blank">Twitter</a></li>
+                <li><a href="http://fb.com/roks0n" taget="_blank">Facebook</a></li>
             </ul>
         </div>
     </div>
