--- a/content/themes/rksn/post.hbs
+++ b/content/themes/rksn/post.hbs
@@ -6,27 +6,53 @@
 {{! Everything inside the #post tags pulls data from the post }}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        <a class="back-button icon-arrow-left" href="{{@blog.url}}">Home</a>
-        <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">Subscribe</a>
-    </nav>
-</header>
+<div id="container" class="container {{#if image}}intro-effect-push{{/if}}">
 
-<main class="content" role="main">
+    <header class="{{#if image}}main-header header post-head{{/if}}">
+        <nav class="main-nav {{#if image}}overlay{{/if}} clearfix" style="position: fixed; width: 100%;">
+            <a class="back-button icon-arrow-left" href="{{@blog.url}}">Home</a>
+            <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">Subscribe</a>
+        </nav>
 
-    <article class="{{post_class}}">
+        {{#if image}}
+            <div class="bg-img" style="background: url('{{image}}') center center; background-size: cover;"></div>
+            <div class="vertical">
+                <div class="main-header-content inner">
+                    <h1 class="post-title">{{title}}</h1>
+                    <section class="post-meta">
+                        <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time> {{tags prefix=" on "}}
+                    </section>
+                </div>
+            </div>
+        {{/if}}
 
-        <header class="post-header">
-            <h1 class="post-title">{{title}}</h1>
-            <section class="post-meta">
-                <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time> {{tags prefix=" on "}}
-            </section>
-        </header>
+    </header>
 
-        <section class="post-content">
+    {{#if image}}
+        <nav class="main-nav clearfix" style="z-index: 9; position: fixed; width: 100%;">
+            <a class="back-button icon-arrow-left" href="{{@blog.url}}">Home</a>
+            <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">Subscribe</a>
+        </nav>
+    {{/if}}
+
+    <article class="{{post_class}} content" role="main">
+
+        <div>
+            <header class="post-header">
+                <h1 class="post-title">{{title}}</h1>
+                <section class="post-meta">
+                    <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time> {{tags prefix=" on "}}
+                </section>
+            </header>
+
             {{content}}
-        </section>
+        </div>
+
+        <!--<article class="content">
+            <div>
+                {{content}}
+            </div>
+        </article>-->
 
         <footer class="post-footer">
 
@@ -75,6 +101,8 @@
 
     </article>
 
-</main>
+
+
+</div>
 
 {{/post}}
