icon font + mobile fixez

--- a/content/themes/rksn/post.hbs
+++ b/content/themes/rksn/post.hbs
@@ -28,6 +28,8 @@
 
     </header>
 
+    <button class="trigger" data-info="Click to read."><span>Trigger</span></button>
+
     {{#if image}}
         <nav class="main-nav clearfix" style="z-index: 9; position: fixed; width: 100%;">
             <a class="back-button icon-arrow-left" href="{{@blog.url}}">Home</a>
