--- a/content/themes/rksn/assets/css/screen.css
+++ b/content/themes/rksn/assets/css/screen.css
@@ -115,6 +115,17 @@ table { border-collapse: collapse; border-spacing: 0; }
     font-style: normal;
 }
 
+@font-face {
+    font-weight: normal;
+    font-style: normal;
+    font-family: 'icomoon';
+    src:url('../fonts/icomoon/icomoon.eot?-ee0u0f');
+    src:url('../fonts/icomoon/icomoon.eot?#iefix-ee0u0f') format('embedded-opentype'),
+        url('../fonts/icomoon/icomoon.woff?-ee0u0f') format('woff'),
+        url('../fonts/icomoon/icomoon.ttf?-ee0u0f') format('truetype'),
+        url('../fonts/icomoon/icomoon.svg?-ee0u0f#icomoon') format('svg');
+}
+
 /* Apply these base styles to all icons */
 [class^="icon-"]:before, [class*=" icon-"]:before {
     font-family: "casper-icons", "Open Sans", sans-serif;
@@ -1248,6 +1259,80 @@ article.article img {
     box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
+/* Trigger Button */
+button.trigger {
+    position: fixed;
+    bottom: 40px;
+    left: 50%;
+    z-index: 5000;
+    display: block;
+    margin-left: -0.5em;
+    padding: 0;
+    width: 1em;
+    height: 1em;
+    border: none;
+    background: transparent;
+    color: transparent;
+    font-size: 2em;
+    cursor: pointer;
+}
+
+.container:not(.notrans) button.trigger {
+    -webkit-transition: opacity 0.3s 0.5s;
+    transition: opacity 0.3s 0.5s;
+}
+
+.container.modify:not(.notrans) button.trigger {
+    opacity: 0;
+    pointer-events: none;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+button.trigger::before {
+    position: absolute;
+    bottom: 100%;
+    left: -120%;
+    padding: 0.8em;
+    width: 300%;
+    color: #fff;
+    content: attr(data-info);
+    font-size: 0.35em;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+button.trigger:focus {
+    outline: none;
+}
+
+button.trigger span {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+button.trigger span::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    content: "\e097";
+    text-transform: none;
+    font-weight: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-family: 'icomoon';
+    line-height: 1;
+    speak: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 /* Effects */
 html, body, .container, .header {
     min-height: 100%;
@@ -1669,6 +1754,7 @@ html, body, .container, .header {
         padding: 0;
         margin-bottom: 2rem;
         border-bottom: #e0e4e7 1px solid;
+        background: #FFF;
     }
 
     .blog-logo {
