fix github link

--- a/content/themes/rksn/index.hbs
+++ b/content/themes/rksn/index.hbs
@@ -13,7 +13,7 @@
             <h2 class="page-description">{{@blog.description}}</h2>
             <hr class="small">
             <ul class="social">
-                <li><a href="http://github.com/rhaluzan" taget="_blank">Github</a></li>
+                <li><a href="http://github.com/roks0n" taget="_blank">Github</a></li>
                 <li><a href="https://twitter.com/roks0n" taget="_blank">Twitter</a></li>
                 <li><a href="http://fb.com/roks0n" taget="_blank">Facebook</a></li>
             </ul>
